<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Back Button -->
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="goBack"/>

    <!--Straight line for section division    -->
    <View
        android:id="@+id/back_button_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#575757"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <!--Label for server connection section    -->
    <TextView
        android:id="@+id/server_connection_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_connection"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button_divider" />

    <!-- IP box -->
    <EditText
        android:id="@+id/server_ip_edit_text"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:hint="@string/edge_ip_text_view"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/server_connection_label" />

    <EditText
        android:id="@+id/deviceID_edit_text"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:hint="@string/device_id_hint"
        app:layout_constraintStart_toEndOf="@id/server_ip_edit_text"
        app:layout_constraintTop_toBottomOf="@id/server_connection_label" />



    <!-- Port box -->
    <EditText
        android:id="@+id/server_port_edit_text"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/edge_port_text_view"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/server_ip_edit_text" />


    <!-- Connect-to-MQTT-Broker box -->
    <Button
        android:id="@+id/start_mqtt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/start_mqtt_service"
        app:layout_constraintStart_toEndOf="@id/server_port_edit_text"
        app:layout_constraintTop_toBottomOf="@id/deviceID_edit_text"
        android:onClick="serviceTryStart"/>
    <Button
        android:id="@+id/stop_mqtt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="Stop Transmission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_mqtt_button"
        android:onClick="serviceTryStop"/>
    <TextView
        android:id="@+id/gps_config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gps_configuration_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_mqtt_button" />

    <!-- GPS Configuration -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/gps_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gps_config_title"
        app:thumbTint="@color/teal_200"
        app:trackTint="@color/teal_700" />

    <!-- Exit Button -->
    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:background="@color/design_default_color_error"
        android:textColor="@color/white"
        android:text="@string/exit_app_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="displayConfirmationDialogue"/>

    <!--Straight line for section division    -->
    <View
        android:id="@+id/gps_config_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="#575757"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gps_switch" />

    <!-- New Sensor Creation Section-->
    <TextView
        android:id="@+id/new_sensor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_sensor_text_view"
        android:paddingTop="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/gps_config_divider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/min_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_value_text_view"
        app:layout_constraintTop_toBottomOf="@id/new_sensor_label"
        app:layout_constraintStart_toEndOf="@+id/sensor_type_spinner"/>

    <TextView
        android:id="@+id/max_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_value_text_view"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/new_sensor_label"
        app:layout_constraintStart_toEndOf="@id/min_value_text_view"/>

    <Spinner
        android:id="@id/sensor_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@id/min_value_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_value_text_view" />
    <EditText
        android:id="@+id/min_value_edit_text"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:hint="@string/min_value_hint"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="@id/min_value_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/min_value_text_view"
        app:layout_constraintTop_toBottomOf="@id/min_value_text_view" />
    <EditText
        android:id="@+id/max_value_edit_text"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:hint="@string/max_value_hint"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="@id/max_value_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/max_value_text_view"
        app:layout_constraintTop_toBottomOf="@id/max_value_text_view" />
    <Button
        android:id="@+id/new_sensor_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#4CAF50"
        android:textColor="@android:color/white"
        android:text="@string/add_new_sensor_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/max_value_edit_text"
        android:onClick="sensorTryAdd"/>

</androidx.constraintlayout.widget.ConstraintLayout>
